--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "spec",
-  "version": "1.0.0",
+  "name": "ludus",
+  "version": "0.1.0",
   "description": "",
-  "main": "spec.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Scott Richmond",
+  "license": "MIT",
+  "dependencies": {
+    "immer": "^7.0.7"
+  }
 }
