--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Scott Richmond",
   "license": "MIT",
   "dependencies": {
-    "immer": "^7.0.7"
+    "immer": "^7.0.7",
+    "immutable": "^4.0.0-rc.12"
   }
 }
