--- a/package.json
+++ b/package.json
@@ -8,7 +8,5 @@
   "author": "Scott Richmond",
   "license": "MIT",
   "dependencies": {},
-  "devDependencies": {
-    "eslint": "^7.10.0"
-  }
+  "devDependencies": {}
 }
