Turn off JS suggestions for now

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "javascript.suggest.autoImports": false
+    "javascript.suggest.autoImports": false,
+    "javascript.suggest.names": false,
+    "javascript.format.semicolons": "insert",
+    "javascript.suggest.enabled": false
 }
