--- a/pkg/docgen/package.json
+++ b/pkg/docgen/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Documentation generator for Ludus",
   "main": "src/main.ld.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
